--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Target directory
+# Target & runtime directory
 /target/
+/runtime/
 
 # Built executable
 /kfn
